update: Modify Docker configuration to streamline build context and enhance dependency management. Adjusted docker-compose.yml to reference the new Dockerfile location and updated Dockerfile to minimize system dependencies while ensuring R packages are installed with error handling. This improves the overall efficiency and maintainability of the microservice setup.

--- a/microservice/docker/Dockerfile
+++ b/microservice/docker/Dockerfile
@@ -8,13 +8,15 @@ ENV R_LIBS_USER=/usr/local/lib/R/library
 ENV PLUMBER_PORT=8001
 ENV PLUMBER_HOST=0.0.0.0
 
-# Install system dependencies
+# Install system dependencies (minimal set)
 RUN apt-get update && apt-get install -y \
-    libcurl4-openssl-dev \
-    libssl-dev \
-    libxml2-dev \
     curl \
+    --no-install-recommends \
+    && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
+
+# Install R packages with error handling
+RUN R -e "install.packages(c('plumber', 'jsonlite', 'seqinr', 'randomForest', 'caret', 'protr', 'MLmetrics', 'ggplot2', 'ROCR', 'pROC', 'PRROC', 'psych'), repos='https://cran.r-project.org/', dependencies=TRUE)"
 
 # Install required R packages
 RUN R -e "install.packages(c('plumber', 'jsonlite', 'seqinr', 'randomForest', 'caret', 'protr', 'MLmetrics', 'ggplot2', 'ROCR', 'pROC', 'PRROC', 'psych'), repos='https://cran.r-project.org/')"
@@ -23,14 +25,14 @@ RUN R -e "install.packages(c('plumber', 'jsonlite', 'seqinr', 'randomForest', 'c
 WORKDIR /app
 
 # Copy application files
-COPY api/ ./api/
-COPY src/ ./src/
-COPY config/ ./config/
+COPY microservice/api/ ./api/
+COPY microservice/src/ ./src/
+COPY microservice/config/ ./config/
 
 # Copy model and data files from parent directory
-COPY ../same_def_matlab_100tree_11mtry_rf.mdl ./
-COPY ../trian_po_set3298_for_ampep_sever.fasta ./
-COPY ../trian_ne_set9894_for_ampep_sever.fasta ./
+COPY same_def_matlab_100tree_11mtry_rf.mdl ./
+COPY trian_po_set3298_for_ampep_sever.fasta ./
+COPY trian_ne_set9894_for_ampep_sever.fasta ./
 
 # Create necessary directories
 RUN mkdir -p logs
