--- a/microservice/docker/docker-compose.yml
+++ b/microservice/docker/docker-compose.yml
@@ -3,8 +3,8 @@ version: '3.8'
 services:
   ampep-microservice:
     build:
-      context: ../
-      dockerfile: docker/Dockerfile
+      context: ../../
+      dockerfile: microservice/docker/Dockerfile.simple
     ports:
       - "8001:8001"
     environment:
