update: Refactor plumber.R to enhance model loading mechanism and improve error handling. Introduced a dedicated environment for model storage, updated Dockerfile to use a more recent R base image, and streamlined system dependencies. Adjusted unit tests for validation logic and clarified test execution instructions.

--- a/microservice/docker/docker-compose.yml
+++ b/microservice/docker/docker-compose.yml
@@ -4,7 +4,7 @@ services:
   ampep-microservice:
     build:
       context: ../../
-      dockerfile: microservice/docker/Dockerfile.simple
+      dockerfile: microservice/docker/Dockerfile
     ports:
       - "8001:8001"
     environment:
