update: updated the docker-compose setting.

--- a/microservice/docker/docker-compose.yml
+++ b/microservice/docker/docker-compose.yml
@@ -15,6 +15,7 @@ services:
       - ../data:/app/data
     networks:
       - ampep-network
+      - axpep-ecosystem-network
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8001/health"]
       interval: 30s
@@ -51,6 +52,8 @@ services:
 networks:
   ampep-network:
     driver: bridge
+  axpep-ecosystem-network:
+    external: true
 
 volumes:
   grafana-storage: 
