update: Add axpep-ecosystem-network to Prometheus and Grafana services in docker-compose.yml

--- a/microservice/docker/docker-compose.yml
+++ b/microservice/docker/docker-compose.yml
@@ -33,6 +33,7 @@ services:
       - ./prometheus.yml:/etc/prometheus/prometheus.yml
     networks:
       - ampep-network
+      - axpep-ecosystem-network
     profiles:
       - monitoring
 
@@ -46,6 +47,7 @@ services:
       - grafana-storage:/var/lib/grafana
     networks:
       - ampep-network
+      - axpep-ecosystem-network
     profiles:
       - monitoring
 
